Implemented all the feedbacks that I got from my mentor

--- a/Project-1/blog.html
+++ b/Project-1/blog.html
@@ -12,7 +12,7 @@
 <body>
     <header class="container">
         <h2 class="subscribe flexItems"><a href="#">Subscribe</a></h2>
-        <h1 class="flexItems title">Blog Title</h1>
+        <h1 class="flexItems title"><a href="index.html">Blog Title</a></h1>
         <i class="material-icons flexItems">search</i>
     </header>
 
@@ -73,7 +73,10 @@
                     <li>Excepteur veniam commodo amet aliquip eiusmod in.</li>
                 </ol>
 
-                <p>Do eu velit irure duis qui labore. Ex quis aliquip minim incididunt cillum tempor eu ipsum aliqua laborum.</p>
+                <p>Do eu velit irure duis qui labore. Ex quis aliquip minim incididunt cillum tempor eu ipsum aliqua laborum: </p>
+                <blockquote cite="#">
+                    Tempor ex mollit amet aliqua aliqua. Sit Lorem ex occaecat commodo labore dolor magna do culpa ut elit. Reprehenderit deserunt sint pariatur cillum amet consequat deserunt anim cupidatat culpa pariatur. Nulla incididunt velit eiusmod quis aliquip. Fugiat aliqua cillum excepteur eu pariatur elit esse sit. Veniam aute fugiat veniam non amet aliquip consectetur.
+                </blockquote>
             </div>
 
             <div class="buttons">
@@ -86,7 +89,14 @@
 
         <aside class="sidebar"> 
             <div class="aboutBox">
-                <h2><em>About</em></h2>
+                <h2><em>About Author</em></h2>
+
+                <img src="assets/img_avatar.png" alt="Avatar" class="avatar">
+
+                <p>Name: Yisau Abdussamad</p>
+                <p>Title: Student</p>
+                <p> Current School: Udacity</p>
+                <p>Short Bio:</p>
                 <p>
                     Commodo dolor eiusmod veniam consectetur aliquip. 
                     Id sit ullamco amet est proident. 
@@ -114,9 +124,9 @@
             <div class="elsewhere">
                 <h2><em>Elsewhere</em></h2>
 
-                <p><a href="#">Github</a></p>
-                <p><a href="#">Twitter</a></p>
-                <p><a href="#">Facebook</a></p>
+                <p><a href="https://twitter.com/SammieYisau_"><img src="https://img.icons8.com/material/24/000000/twitter-squared.png"/></a></p>
+                <p><a href="https://medium.com/@sammieyisau"><img src="https://img.icons8.com/material/24/000000/medium-logo.png"/></a></p>
+                <p><a href="https://www.facebook.com/"><img src="https://img.icons8.com/material/24/000000/facebook-f.png"/></a></p>
 
             </div>
             
