--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -10,15 +10,26 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="#recent">Recent Posts</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About Blog</a></li>
+          </ul>
+    </nav>
     <header class="container">
         <h2 class="subscribe flexItems"><a href="#">Subscribe</a></h2>
-        <h1 class="flexItems title">Blog Title</h1>
+        <h1 class="flexItems title"><a href="#">Blog Title</a></h1>
         <i class="material-icons flexItems">search</i>
     </header>
 
     <main>
         <div class="card">
-                <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+                <figure>
+                    <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+                    <figcaption> A brand new post. </figcaption>
+                </figure>
 
 
             <!-- <span>Photo by <a href="https://unsplash.com/@surface?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Surface</a> on <a href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
@@ -39,29 +50,37 @@
         </div>
 
         <div class="card">
+            <figure>
+                <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+                <figcaption> A brand new post. </figcaption>
+
+            </figure>
+
+
+        <!-- <span>Photo by <a href="https://unsplash.com/@surface?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Surface</a> on <a href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
+        <div class="cardDetails">
+            <p class="blue">World</p>
+            <h4>
+                <strong>Example Blog Post</strong>
+            </h4>
+            <p class="date">
+                Nov. 12
+            </p>
+            <p>
+                This card represents an example blog post.
+            </p>
+
+            <a href="blog.html">Continue reading...</a>
+        </div>
+    </div>
+
+
+    <div class="card">
+        <figure>
             <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+            <figcaption> A brand new post. </figcaption>
 
-
-        <!-- <span>Photo by <a href="https://unsplash.com/@surface?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Surface</a> on <a href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
-        <div class="cardDetails">
-            <p class="blue">World</p>
-            <h4>
-                <strong>Example Blog Post</strong>
-            </h4>
-            <p class="date">
-                Nov. 12
-            </p>
-            <p>
-                This card represents an example blog post.
-            </p>
-
-            <a href="blog.html">Continue reading...</a>
-        </div>
-    </div>
-
-
-    <div class="card">
-        <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+        </figure>
 
 
         <!-- <span>Photo by <a href="https://unsplash.com/@surface?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Surface</a> on <a href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
@@ -82,7 +101,11 @@
     </div>
 
     <div class="card">
-        <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+        <figure>
+            <img class="blogImg" src="assets/surface.jpg" alt="Blog Post" width="100%" height="65%">
+            <figcaption> A brand new post. </figcaption>
+
+        </figure>
 
 
         <!-- <span>Photo by <a href="https://unsplash.com/@surface?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Surface</a> on <a href="/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
