--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Manipulating the DOM</title>
+  <title> Landing Page - Manipulating the DOM</title>
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
   <link href="css/styles.css" rel="stylesheet">
@@ -52,8 +52,10 @@
     </section>
   </main>
   <footer class="page__footer">
-    <p>&copy Udacity</p>
+    <p>&copy <a href="www.github.com/AbdussamadYisau/" rel="noopener" target="_blank"> Abdussamad Yisau </a> </p>
   </footer>
 
+
+  <script src="js/app.js"></script>
 </body>
 </html>
