--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -15,10 +15,14 @@
   <header class="page__header">
     <nav class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list"></ul>
+      <ul id="navbar__list">
+
+        
+      </ul>
     </nav>
   </header>
   <main>
+
     <header class="main__hero">
       <h1>Landing Page </h1>
     </header>
