Done with the nitty gritty, remains to beautify.

--- a/Project3-WeatherJournalApp/website/index.html
+++ b/Project3-WeatherJournalApp/website/index.html
@@ -11,8 +11,9 @@
          <div class ="holder headline">
             Weather Journal App
          </div>
+         <form class="appForm" autocomplete="off">
          <div class ="holder zip">
-            <label for="zip">Enter Zipcode here</label>
+            <label for="zip">Enter Zipcode here (US only)</label>
             <input type="text" id="zip" placeholder="enter zip code here">
          </div>
          <div class ="holder feel">
@@ -20,7 +21,7 @@
             <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
             <button id="generate" type = "submit"> Generate </button>
          </div>
-
+         </form>
          <div class ="holder entry">
             <div class = "title">Most Recent Entry</div>
             <div id = "entryHolder">
