--- a/Project3-WeatherJournalApp/website/index.html
+++ b/Project3-WeatherJournalApp/website/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <title>Weather Journal</title>
       <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-      <!-- <link rel="stylesheet" href="style.css"> -->
+      <link rel="stylesheet" href="style.css">
    </head>
    <body>
       <div id = "app">
@@ -12,15 +12,15 @@
             Weather Journal App
          </div>
          <form class="appForm" autocomplete="off">
-         <div class ="holder zip">
-            <label for="zip">Enter Zipcode here (US only)</label>
-            <input type="text" id="zip" placeholder="enter zip code here">
-         </div>
-         <div class ="holder feel">
-            <label for="feelings">How are you feeling today?</label>
-            <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-            <button id="generate" type = "submit"> Generate </button>
-         </div>
+            <div class ="holder zip">
+               <label for="zip">Enter Zipcode here (US only)</label>
+               <input type="text" id="zip" placeholder="enter zip code here">
+            </div>
+            <div class ="holder feel">
+               <label for="feelings">How are you feeling today?</label>
+               <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="1" cols="30"></textarea>
+               <button id="generate" type = "submit"> Generate </button>
+            </div>
          </form>
          <div class ="holder entry">
             <div class = "title">Most Recent Entry</div>
