--- a/Project3-WeatherJournalApp/website/index.html
+++ b/Project3-WeatherJournalApp/website/index.html
@@ -13,8 +13,8 @@
          </div>
          <form class="appForm" autocomplete="off">
             <div class ="holder zip">
-               <label for="zip">Enter Zipcode here (US only)</label>
-               <input type="text" id="zip" placeholder="enter zip code here">
+               <label for="zip">Enter City Name: </label>
+               <input type="text" id="city" placeholder="enter city name">
             </div>
             <div class ="holder feel">
                <label for="feelings">How are you feeling today?</label>
